test_case/rust-lang_rust/31538_182502928.rs
 rust
    data.y = vec![];  // is ok
    drop(data.y); // error: use of moved value: `data.y`
